# image-registration-challenge

./: .gitignore  Dockerfile  README.md
app/: explore.py  pyproject.toml
src/: pyproject.toml
src/flapjack/: cli.py  data.py  explore_again.py  inference.py  make_crops.py  make_dataset.py  model.py  train.py  utils.py
src/tests/: test_flapjack.py
