[tool.poetry]
name = "image-registration"
version = "0.1.0"
description = ""
authors = ["jandremarais <maraisjandre9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
