[tool.poetry]
name = "flapjack"
version = "0.1.0"
description = ""
authors = ["jandremarais <maraisjandre9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^7.1.2"
pandas = "^1.0.5"
pytorch-lightning = "^0.8.1"
torch = "1.5.0"
torchvision = "0.6.0"
typer = "^0.3.0"
matplotlib = "^3.2.2"
opencv-contrib-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
